fixing navbar collapse

--- a/css/style.css
+++ b/css/style.css
@@ -98,3 +98,11 @@ body {
     left: 0;
     background-position: center;
 }
+
+.navbar-fixed-top .navbar-toggle .icon-bar {
+    background-color: #888;
+}
+
+button.navbar-toggle.collapsed, button.navbar-toggle{
+    margin-top: 22px;
+}
